apps/send/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: send
  namespace: send
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: send
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
